@@ -174,7 +174,7 @@ public class TownyFormatter {
 		// Claimable: No | PvP: Off
 		out.add(Colors.Green + "Claimable: " + (world.isClaimable() ? Colors.LightGreen + "Yes" : Colors.Rose + "No")
 				+ Colors.Gray + " | "
-				+ Colors.Green + "PvP: " + (world.isPvP() ? Colors.Rose + "On" : Colors.LightGreen + "Off"));
+				+ Colors.Green + "PvP: " + (world.isPVP() ? Colors.Rose + "On" : Colors.LightGreen + "Off"));
 		// Using Default Settings: Yes
 		out.add(Colors.Green + "Using Default Settings: " + (world.isUsingDefault() ? Colors.LightGreen + "Yes" : Colors.Rose + "No"));
 		// Wilderness:
